# axum-template

./: .env.example  Cargo.toml  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: axum-template.yml
app/: Cargo.toml
app/docker/: Dockerfile
app/src/: cmd.rs  main.rs
app/src/server/: app.rs
app/src/utils/: config.rs
infra/: Cargo.toml
infra/src/server/: config.rs  log.rs
infra/src/server/config/: database.rs  server.rs
migration/: Cargo.toml
migration/src/: cmd.rs  lib.rs  main.rs
