[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
dotenvy = { workspace = true }
sentry = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
sea-orm = { workspace = true, features=["sqlx-postgres","runtime-tokio"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
infra = {path = "../infra"}
